--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  pdftex.doc.tar.xz: 286f12387fc0e9e3471976d5dfe3f32a53dc8141
-  pdftex.tar.xz: f2cfe027552e280400a48a89c558f8ec5ebc3033
+  pdftex.doc.r64690.tar.xz: 133037590f21bb8944b54ea0b6294946dec79865
+  pdftex.r64690.tar.xz: 0bab25bac8d9af8699993abdf1c9fabe9c4c1cda
